# ngs-dynamic-subnet

./: README.md  __main__.py  pyproject.toml
NG_Subnet/: NG_Subnet_Calculator.py  __init__.py
tests/: __init__.py  test_generateDynamicSubnets.py  test_requiredSize.py
